2012-11-02  Murray Cumming  <murrayc@murrayc.com>

        Self hosting: Do not allow ident authorization.

        * glom/libglom/connectionpool_backends/postgres_self.cc:
	Remove the ident lines from pg_hba.conf. We use trust already,
	so we do not need both.

2012-10-25  Murray Cumming  <murrayc@murrayc.com>

        Self hosting: Only allow attempts from localhost when not shared.

        * glom/libglom/connectionpool_backends/postgres_self.cc:
	When the Glom system should not be shared on the network (the 
	default for new files), do not even allow connection attempts
	from non-localhost. This also removes the use of the deprecated 
	postgres -i option.

2012-08-31  Murray Cumming  <murrayc@murrayc.com>

        Catch exceptions when updating the libgda metastore.

        * glom/libglom/connectionpool.cc:
        * glom/libglom/db_utils.cc: Put try/catch around 
	uses of Gda::Connection::update_meta_store_for_table()
	because it is currently failing in test_selfhosting_new_then_change_columns
	on my Fedora 17.

2012-04-19  Murray Cumming  <murrayc@murrayc.com>

	Add some translatable strings for Online Glom

	* glom/onlineglom_strings.cc: Add some strings needed by
	the new reports feature in gwt-glom.

2012-04-16  Murray Cumming  <murrayc@murrayc.com>

	Fix make check.

	* tests/test_document_load_translations.cc: Update the
	number of translations.

2012-04-13  Murray Cumming  <murrayc@murrayc.com>

	Film Manager example: Correct the Contacts reports.

	* examples/example_film_manager.glom: Copy them 
	from the Small Business example. They were missing
	the Group By fields.

2012-04-13  Murray Cumming  <murrayc@murrayc.com>

	Windows build: Fix some typos.

	* glom/glom_create_from_example.cc:
	* glom/glom_test_connection.cc: Add closing
	).
	Bug #674009 (alien)

2012-04-12  Malcolm Lewis  <malcolmlewis@opensuse.org>

	Update the FSF address in comment blocks.

	Bug #673881

2012-04-12  Antoine Jacoutot  <ajacoutot@gnome.org>
